2023-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Continued work on the oss-fuzz build
	script.  Still not there yet, but closer.

	* configure.ac: Fix many bugs related to building library
	dependency list.  Much thanks to Tobias Mark for a patch to fix
	the library dependency order.

2023-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Eliminate redundant check for HEIF library.

	* www/INSTALL-unix.rst: Document how to get a maximally-static
	build using `PKG_CONFIG='pkg-config --static' ./configure`.

	* fuzzing/oss-fuzz-build.sh: Continued work to try to accomplish a
	static oss-fuzz build. Not quite successful yet.

	* magick/GraphicsMagick.pc.in (Description): Added project URL.

	* configure.ac: Major change to require/trust pkg-config much more
	than before.  Deleted outdated code.

2023-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/GraphicsMagick.pc.in: Add OpenMP runtime library as a
	private dependency.

	* coders/Makefile.am: If JXL is enabled, then link the JXL module
	with C++ (if modules are enabled), or the GraphicsMagick library
	with C++ (if modules are not enabled).

	* configure.ac: Fix detection of if OpenMP is enabled. Add the
	OpenMP runtime as an explicit library dependency.

	* coders/acppfile.cpp: An example useless C++ file.

2023-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am: When linking JXL or FlashPIX, use the C++
	linker.

2023-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: libbrotlidec and liblbrotlienc depend on
	libbrotlicommon.

	* fuzzing/oss-fuzz-build.sh: Build script improvements.  Change
	'freetype2' to 'freetype'. Add libde265, libheif, and libjxl to
	build.

2023-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/thanks.rst: Provide attributions expected by
	https://foss.heptapod.net/

	* www/Hg.rst: Replace OSDN with foss.heptapod.net.
