@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020231128"
-#define public MagickPackageReleaseDate "snapshot-20231128"
+#define public MagickPackageVersionAddendum ".020231129"
+#define public MagickPackageReleaseDate "snapshot-20231129"
